# Inference-HW

./: .env  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  compil_hls.sh  docker-compose.yml  run_llm.tcl  toolchain-aarch64.cmake
.github/workflows/: ci.yml
ZCU106_BOOT/xilinx_zcu106_base/: zcu106_dpu.xpfm
ZCU106_BOOT/xilinx_zcu106_base/hw/: bd.hwh  bd_v_hdmi_rx_ss_0_0.hwh  bd_v_hdmi_tx_ss_0_0.hwh  bd_v_proc_ss_0_0.hwh  psu_init.html  sysdef.xml  xsa.json  xsa.xml  zcu106_ROI_HDMI.hpfm
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/054d23ee10bd2945/: 054d23ee10bd2945.xci  bd_xbar_2.dcp  bd_xbar_2_sim_netlist.v  bd_xbar_2_sim_netlist.vhdl  bd_xbar_2_stub.v  bd_xbar_2_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/0568e0d6a49f249d/: 0568e0d6a49f249d.xci  bd_axi_register_slice_0_0.dcp  bd_axi_register_slice_0_0_sim_netlist.v  bd_axi_register_slice_0_0_sim_netlist.vhdl  bd_axi_register_slice_0_0_stub.v  bd_axi_register_slice_0_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/09c85e4be1531c05/: 09c85e4be1531c05.xci  bd_axi_intc_1_0.dcp  bd_axi_intc_1_0_sim_netlist.v  bd_axi_intc_1_0_sim_netlist.vhdl  bd_axi_intc_1_0_stub.v  bd_axi_intc_1_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/09f663bf7b6f8aa6/: 09f663bf7b6f8aa6.xci  bd_2290_v_vid_in_axi4s_0.dcp  bd_2290_v_vid_in_axi4s_0_sim_netlist.v  bd_2290_v_vid_in_axi4s_0_sim_netlist.vhdl  bd_2290_v_vid_in_axi4s_0_stub.v  bd_2290_v_vid_in_axi4s_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/0b0fc100f59afe10/: 0b0fc100f59afe10.xci  bd_82bb_axi_crossbar_0.dcp  bd_82bb_axi_crossbar_0_sim_netlist.v  bd_82bb_axi_crossbar_0_sim_netlist.vhdl  bd_82bb_axi_crossbar_0_stub.v  bd_82bb_axi_crossbar_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/0f7dce057e7fea49/: 0f7dce057e7fea49.xci  bd_v_frmbuf_rd_0_0.dcp  bd_v_frmbuf_rd_0_0_sim_netlist.v  bd_v_frmbuf_rd_0_0_sim_netlist.vhdl  bd_v_frmbuf_rd_0_0_stub.v  bd_v_frmbuf_rd_0_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/141db86fd321a0db/: 141db86fd321a0db.xci  bd_xbar_0.dcp  bd_xbar_0_sim_netlist.v  bd_xbar_0_sim_netlist.vhdl  bd_xbar_0_stub.v  bd_xbar_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/1518db3f607aa997/: 1518db3f607aa997.xci  bd_auto_pc_12.dcp  bd_auto_pc_12_sim_netlist.v  bd_auto_pc_12_sim_netlist.vhdl  bd_auto_pc_12_stub.v  bd_auto_pc_12_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/1a1bdd28b67beedb/: 1a1bdd28b67beedb.xci  bd_m00_regslice_0.dcp  bd_m00_regslice_0_sim_netlist.v  bd_m00_regslice_0_sim_netlist.vhdl  bd_m00_regslice_0_stub.v  bd_m00_regslice_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/1b3d0f9900b30898/: 1b3d0f9900b30898.xci  bd_proc_sys_reset_1_0.dcp  bd_proc_sys_reset_1_0_sim_netlist.v  bd_proc_sys_reset_1_0_sim_netlist.vhdl  bd_proc_sys_reset_1_0_stub.v  bd_proc_sys_reset_1_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/1c462a5950267277/: 1c462a5950267277.xci  bd_axi_intc_0_0.dcp  bd_axi_intc_0_0_sim_netlist.v  bd_axi_intc_0_0_sim_netlist.vhdl  bd_axi_intc_0_0_stub.v  bd_axi_intc_0_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/1fcdcca8e8cccac2/: 1fcdcca8e8cccac2.xci  bd_c2dc_vsc_0.dcp  bd_c2dc_vsc_0_sim_netlist.v  bd_c2dc_vsc_0_sim_netlist.vhdl  bd_c2dc_vsc_0_stub.v  bd_c2dc_vsc_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/23808dd1233eddcb/: 23808dd1233eddcb.xci  bd_proc_sys_reset_0_0.dcp  bd_proc_sys_reset_0_0_sim_netlist.v  bd_proc_sys_reset_0_0_sim_netlist.vhdl  bd_proc_sys_reset_0_0_stub.v  bd_proc_sys_reset_0_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/27cc354a9ffbc762/: 27cc354a9ffbc762.xci  bd_proc_sys_reset_7_0.dcp  bd_proc_sys_reset_7_0_sim_netlist.v  bd_proc_sys_reset_7_0_sim_netlist.vhdl  bd_proc_sys_reset_7_0_stub.v  bd_proc_sys_reset_7_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/287dd3104923b728/: 287dd3104923b728.xci  bd_ibufds_gt_odiv2_0.dcp  bd_ibufds_gt_odiv2_0_sim_netlist.v  bd_ibufds_gt_odiv2_0_sim_netlist.vhdl  bd_ibufds_gt_odiv2_0_stub.v  bd_ibufds_gt_odiv2_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/2aae1c3174278c98/: 2aae1c3174278c98.xci  bd_c2dc_smartconnect_0_0.dcp  bd_c2dc_smartconnect_0_0_sim_netlist.v  bd_c2dc_smartconnect_0_0_sim_netlist.vhdl  bd_c2dc_smartconnect_0_0_stub.v  bd_c2dc_smartconnect_0_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/311859a702953aee/: 311859a702953aee.xci  bd_c2dc_axis_register_slice_0_0.dcp  bd_c2dc_axis_register_slice_0_0_sim_netlist.v  bd_c2dc_axis_register_slice_0_0_sim_netlist.vhdl  bd_c2dc_axis_register_slice_0_0_stub.v  bd_c2dc_axis_register_slice_0_0_stub.vhdl
ZCU106_BOOT/xilinx_zcu106_base/hw/ipcache/ip/2020.2/40b077927af86dbe/: 40b077927af86dbe.xci  (+6 more)
ZCU106_BOOT/xilinx_zcu106_base/hw/prj/: rebuild.tcl
ZCU106_BOOT/xilinx_zcu106_base/sw/: zcu106_dpu.spfm
ZCU106_BOOT/xilinx_zcu106_base/sw/zcu106_dpu/boot/: bl31.elf  linux.bif  pmufw.elf  u-boot.elf  zynqmp_fsbl.elf
ZCU106_BOOT/xilinx_zcu106_base/sw/zcu106_dpu/linux_domain/image/: boot.scr
build-CPU/: CMakeLists.txt  Dockerfile  build.sh  build_server.py  src_cp.sh
build-FPGA (aarch64)/: CMakeLists.txt  Dockerfile  build.sh  build_server.py  src_cp.sh  toolchain-aarch64.cmake
converter/: Dockerfile  server.py
scripts/: docker-entrypoint.sh  pentalinux.sh  quantize.ipynb
src/: context.cpp  decode.cpp  main.cpp  tensor.cpp  tensor_fpga.cpp  tensor_fpga.hpp  vocab.cpp  weight.cpp  weight.hpp
ui/: Dockerfile  app.py
ui/blueprints/: __init__.py  cpu.py  docs.py  fpga.py  sd.py  session_manager.py
ui/inference_template/src/: context.hpp  decode.hpp  tensor.hpp  vocab.hpp
ui/static/: style.css
ui/static/js/: cpu-form.js  fpga-form.js
ui/template/: base.html  cpu.html  fpga.html  index.html  sd.html
ui/template/docs/: _base_docs.html  architecture.html  cpu-build.html  fpga-build.html  getting-started.html  index.html  sd-image.html  troubleshooting.html
vitis/: Dockerfile  vitis_server.py
(+2013 files in other folders)
